* S02/S13: s/casted/cast/, as suggested by Uri.
git-svn-id: http://svn.pugscode.org/pugs@23330 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -500,11 +500,11 @@ The adverbial forms all weed out non-existing entries.
 
 =item *
 
-In numeric context (i.e. when casted into C<Int> or C<Num>), a Hash object
+In numeric context (i.e. when cast into C<Int> or C<Num>), a Hash object
 becomes the number of pairs contained in the hash.  In a boolean context, a
 Hash object is true if there are any pairs in the hash.  In either case,
 any intrinsic iterator would be reset.  (If hashes do carry an intrinsic
-iterator (as they do in Perl 5), there will be a C<.reset> method on the h
+iterator (as they do in Perl 5), there will be a C<.reset> method on the
 hash object to reset the iterator explicitly.)
 
 =item *
