--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -219,10 +219,10 @@ together, just as if you had written it out explicitly:
 
 If fewer than two arguments are given, one MMD attempt is made to
 dispatch to the operator anyway with whatever arguments are given.
-If this MMD dispatch succeeds, the result becomes the result of the
-of the reduce.
+If this multi-dispatch succeeds, the result becomes the result of the
+reduce.
 
-Otherwise, if the MMD dispatch fails, then if there is one argument,
+Otherwise, if the dispatch fails, then if there is one argument,
 that argument is returned.  However, this default doesn't make sense
 for an operator like C<< < >> that doesn't return the same type as it
 takes, so these kinds of operators overload the single-argument case
